# thaiscript

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
patches/: sort-by@1.2.0.patch
public/: splashscreen.html
src/: LetterVariantCard.tsx  LetterVariantsList.tsx  main.tsx  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/entities/: letter_variant.rs  mod.rs  prelude.rs  review_outcome.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  m20240316_104818_create_letter_variant_table.rs  m20240316_131723_seed_letter_variant_data.rs  m20240317_142206_create_review_outcome_table.rs  seed-data-2024_03_16.json  seed-data.json
src-tauri/service/: Cargo.toml
src-tauri/service/src/: db.rs  lib.rs  mutation.rs  query.rs
src-tauri/src/: main.rs
src-tauri/src/commands/: letter_variant.rs  mod.rs  review.rs  review_outcome.rs  speech.rs
src-tauri/src/db/: seed-data.json
src/api/: mutations.ts  queries.ts  types.ts
src/config/: mantine-theme.tsx  router.tsx
src/data/: types.ts
src/labels/: letter-variant.ts
src/speech/: index.ts  speech-synthesis.ts
src/state/: navigation.ts
src/views/: HomeView.module.css  HomeView.tsx
src/views/Home/: HomeView.module.css  HomeView.tsx  LetterVariantCard.tsx  LetterVariantsList.tsx
src/views/Reviewing/: ReviewingView.module.css  ReviewingView.tsx  SessionTimer.tsx  index.ts
src/views/Reviewing/reviews/: Initial.tsx  LetterToRomanization.tsx  LetterToTransliteration.tsx  LetterToWord.tsx  Review.module.css  index.tsx
