[package]
name = "thaiscript"
version = "0.0.1"
description = "ThaiScript"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "entity", "migration", "service"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.12.14", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
entity = { path = "entity" }
migration = { path = "migration" } # Only use this if migrations are to be run on the end user's machine

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
