[package]
name = "thaiscript"
version = "0.0.1"
description = "ThaiScript"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "entity", "migration", "service"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.12.14", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
entity = { path = "entity" }
thaiscript-db-service = { path = "service" }
tokio = { version = "1.36.0", features = ["full"] }
rip_shuffle = "0.2.0"
rand = "0.8.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
