[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
description = "Migrations for the database"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
entity = { path = "../entity" }
